--- a/TaquaPOS/TaquaPOS.vbproj
+++ b/TaquaPOS/TaquaPOS.vbproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
